@startuml
skinparam classAttributeIconSize 0

class Jugador{
    +identificador: int 
    +color: str 
    +objetivo: Objetivo 

}

class Pais{
    +pieza: Pieza
    +dibujo: Dibujo

    
    + validarAtaque(paisSalida, paisAAtacar, numeroDeTropas) : bool
    + atacar(paisSalida, paisAAtacar, numeroDeTropas) : void
    + reducirTropas(numeroDeTropas) : void
}

class ValidarObjetivo{}


Jugador <--> Pais
Jugador--->ValidarObjetivo

@enduml